Fix zoom level of map elements (icons) + Add sensor accuracy and location accuracy radius + Fix GeoURI class when query is not used in a geo URI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Get Me There</string>
     <string name="style">Style</string>
+    <string name="coordinates_chooser_title">Choose a location</string>
 </resources>
