--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Get Me There</string>
     <string name="style">Style</string>
-    <string name="coordinates_chooser_title">Choose a location</string>
+    <string name="title_activity_offline_locations">Get Me There</string>
+    <string name="location_to_search">Location to Search</string>
+    <string name="confirm">Confirm</string>
 </resources>
